Schedule-Albano_Final.html
FINAL FINAL

--- a/Schedule-Albano_Final.html
+++ b/Schedule-Albano_Final.html
@@ -15,15 +15,15 @@
 <th colspan="9" style="border:1px solid black" text-align=center;>Calcium</th>
 </tr>
 <tr>
-<th style="border:1px solid black">Time</th>
-<th style="border:1px solid black">Monday</th>
-<th style="border:1px solid black">Time</th>
-<th style="border:1px solid black">Tuesday</th>
-<th style="border:1px solid black">Time</th>
-<th style="border:1px solid black">Wednesday</th>
-<th style="border:1px solid black">Time</th>
-<th style="border:1px solid black">Thursday</th>
-<th style="border:1px solid black">Friday</th>
+<th style="border:1px solid black">TIME</th>
+<th style="border:1px solid black">MONDAY</th>
+<th style="border:1px solid black">TIME</th>
+<th style="border:1px solid black">TUESDAY</th>
+<th style="border:1px solid black">TIME</th>
+<th style="border:1px solid black">WEDNESDAY</th>
+<th style="border:1px solid black">TIME</th>
+<th style="border:1px solid black">THURSDAY</th>
+<th style="border:1px solid black">FRIDAY</th>
 </tr>
 <tr>
 <td style="border:1px solid black">7:30 AM - 8:00 AM</td>
